--- a/app/globals.css
+++ b/app/globals.css
@@ -147,3 +147,7 @@ a {
   -ms-flex-direction: column;
   flex-direction: column;
 }
+
+button {
+  cursor: pointer;
+}
