--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -1,3 +1,5 @@
-.locked {
-  overflow-y: hidden !important;
+@media (max-width: 991px) {
+  .locked {
+    overflow-y: hidden !important;
+  }
 }
